<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Swipe Them</string>
    <string name="image_description"></string>
    
    <string name="label_score">SCORE</string>
    <string name="label_best">BEST</string>
    
    <string name="how_to_play_1">Swipe the tiles in the direction of the arrows</string>
    <string name="how_to_play_2">Don\'t touch these tiles</string>
    <string name="how_to_play_3">Swipe the tiles within 5 seconds or they will explode</string>
    <string name="how_to_play_4">START</string>
    
    <string name="games_api_id">827376388036</string>
	<string name="achievement_50">CgkIxI_nm4oYEAIQAQ</string>
	<string name="achievement_75">CgkIxI_nm4oYEAIQAg</string>
	<string name="achievement_100">CgkIxI_nm4oYEAIQAw</string>
	<string name="achievement_150">CgkIxI_nm4oYEAIQBA</string>
	<string name="achievement_200">CgkIxI_nm4oYEAIQBQ</string>
	<string name="leaderboard_high_scores">CgkIxI_nm4oYEAIQBg</string>
	
	<string name="banner_ad_unit_id">ca-app-pub-4345286681605689/7217503883</string>

</resources>