<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/how_to_play"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DD000000"
    android:visibility="gone"
    android:padding="10dp" >
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_description"
            android:layout_margin="15dp"
            android:src="@drawable/example" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/how_to_play_1"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="15dp"
            android:background="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_margin="15dp"
	        android:gravity="center_horizontal">
        
	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:contentDescription="@string/image_description"
	            android:src="@drawable/mine1"
	            android:layout_marginRight="10dp" />
	        
	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:contentDescription="@string/image_description"
	            android:src="@drawable/mine2"
	            android:layout_marginRight="10dp" />
	        
	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:contentDescription="@string/image_description"
	            android:src="@drawable/mine4"
	            android:layout_marginRight="10dp" />
	        
	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:contentDescription="@string/image_description"
	            android:src="@drawable/mine3" />
        
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/how_to_play_2"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_margin="15dp"
            android:background="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_margin="15dp"
	        android:gravity="center_horizontal">
        
	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:contentDescription="@string/image_description"
	            android:src="@drawable/timer1"
	            android:layout_marginRight="10dp" />
	        
	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:contentDescription="@string/image_description"
	            android:src="@drawable/timer2"
	            android:layout_marginRight="10dp" />
	        
	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:contentDescription="@string/image_description"
	            android:src="@drawable/timer3"
	            android:layout_marginRight="10dp" />
	        
	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:contentDescription="@string/image_description"
	            android:src="@drawable/timer4" />
        
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/how_to_play_3"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:background="@layout/border_button_ranking"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/how_to_play_4"
            android:textSize="20sp" />
        
    </LinearLayout>

</ScrollView>